todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-app-image-claim
      containers:
        - name: todo-app
          image: todo-app:1.12
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/images
