todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 1234
      protocol: TCP
      nodePort: 30081
      targetPort: 8080
