todo-app/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
  namespace: project
spec:
  parentRefs:
    - name: my-gateway
      namespace: exercises
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /todos
      backendRefs:
        - name: todo-app-svc
          port: 1234
